--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <title>Sarah's website under construction.</title>
         <meta charset = "UTF-8">
     <style>
+        h2 {
+            color: navy;
+            font-size: 70px;
+            margin: 0px;
+            background-color: beige;
+            text-align: center;
 
+        }
     </style>
     <head>
     </head>
         <body>
-            <h2>This is the title.</h2>
+            <h2>Sarah's website under construction</h2>
             <p>Lorem ipsum</p>
         </body>
     </head>
