--- a/index.html
+++ b/index.html
@@ -3,20 +3,10 @@
     <head>
         <title>Sarah's website under construction.</title>
         <meta charset = "UTF-8">
-    <style>
-        h2 {
-            color: navy;
-            font-size: 70px;
-            margin: 0px;
-            background-color: beige;
-            text-align: center;
-
-        }
-    </style>
+        <link rel="stylesheet" href="style.css">
     <head>
     </head>
         <body>
             <h2>Sarah's website under construction</h2>
-            <p>Lorem ipsum</p>
         </body>
     </head>
