--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <title>Sarah's website under construction.</title>
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
-    <head>
     </head>
-        <body>
-            <h2>Sarah's website under construction</h2>
-        </body>
-    </head>
+    <body>
+        <h2>Sarah's website under construction</h2>
+    </body>
+</html>
