--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Sarah's website under construction.</title>
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://snass34.github.io/style.css">
     </head>
     <body>
         <h2>Sarah's website under construction</h2>
