--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Sarah's website under construction.</title>
         <meta charset = "UTF-8">
-        <link rel="stylesheet" type="text/css" href="https://snass34.github.io/style.css">
+        <link rel="stylesheet" href="https://snass34.github.io/style.css">
     </head>
     <body>
         <h2>Sarah's website under construction</h2>
