--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
+    <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+      </ul>
     <body>
         <h2>Sarah's website under construction</h2>
     </body>
