--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-      </ul>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
     <body>
         <h2>Sarah's website under construction</h2>
     </body>
