Rename home page.

--- a/research.html
+++ b/research.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sarah's website under construction.</title>
+        <title>Research, Sarah's website under construction.</title>
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h2>Sarah's website under construction</h2>
+        <h2>Research, Sarah's website under construction</h2>
     </body>
     <div class="topnav">
         <a class="active" href="home.html">Home</a>
