Connecting web pages.

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         <h2>Projects, Sarah's website under construction</h2>
     </body>
     <div class="topnav">
-        <a class="active" href="home.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="research.html">Research</a>
         <a href="teaching.html">Teaching</a>
