--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h2>Sarah's website under construction</h2>
     </body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
+        <a href="teaching.html">Teaching</a>
     </div>
 </html>
