--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
+        <a href="google.com">Projects</a>
         <a href="research.html">Research</a>
         <a href="teaching.html">Teaching</a>
     </div>
