--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
+    <h1>Fixed Angled Header</h1>
     <body>
         <h2>Sarah's website under construction</h2>
     </body>
