--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Research, Sarah's website under construction</h1>
+        <h1>Teaching, Sarah's website under construction</h1>
     </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
