Header font size and color.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <h1>Sarah's website under construction</h1>
+    <body>
+        <h1>Sarah's website under construction</h1>
+    </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="projects.html">Projects</a>
