--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Sarah's website under construction</h1>
+        Sarah's website under construction
     </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
