--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <top>
         Sarah's website under construction
-    </body>
+    </top>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="projects.html">Projects</a>
