--- a/internships.html
+++ b/internships.html
@@ -5,9 +5,9 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <top>
         Research, Sarah's website under construction
-    </body>
+    </top>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="internships.html">Internships</a>
