--- a/teaching.html
+++ b/teaching.html
@@ -5,9 +5,9 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <top>
-        Teaching, Sarah's website under construction
-    </top>
+    <body>
+        <h1>Teaching, Sarah's website under construction</h1>
+    </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="projects.html">Projects</a>
