--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        Projects, Sarah's website under construction
+        <h1>Projects, Sarah's website under construction</h1>
     </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
