--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     </body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
+        <a href="internships.html">Internships</a>
         <a href="projects.html">Projects</a>
         <a href="teaching.html">Teaching</a>
         <a href="research.html">Research</a>
