--- a/internships.html
+++ b/internships.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Research, Sarah's website under construction.</title>
+        <title>Internships, Sarah's website under construction.</title>
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
