--- a/index.html
+++ b/index.html
@@ -15,4 +15,12 @@
         <a href="teaching.html">Teaching</a>
         <a href="research.html">Research</a>
     </div>
+    <div class="row">
+        <div class="column">
+          <img src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="graduating_anteater.jpg" alt="Graduating Anteater" style="width:100%">
+        </div>
+    </div>
 </html>
