Add images, correct .jpg to .png

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
         </div>
         <div class="column">
-          <img src="graduating_anteater.jpg" alt="Graduating Anteater" style="width:100%">
+          <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:100%">
         </div>
     </div>
 </html>
