--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
     <div class="row">
         <div class="column">
-          <img src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
+          <img1 src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
         </div>
         <div class="column">
-          <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:100%">
+          <img1 src="graduating_anteater.png" alt="Graduating Anteater" style="width:100%">
         </div>
     </div>
 </html>
