--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <a href="research.html">Research</a>
     </div>
     <div class="row">
-        <div class="column">
-          <img1 src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
-        </div>
-        <div class="column">
-          <img1 src="graduating_anteater.png" alt="Graduating Anteater" style="width:100%">
+        <div class="imageFormat1">
+            <div class="column">
+            <img src="anteater_logo.png" alt="Anteater Logo" style="width:100%">
+            </div>
+            <div class="column">
+            <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:100%">
+            </div>
         </div>
     </div>
 </html>
