--- a/internships.html
+++ b/internships.html
@@ -9,8 +9,8 @@
         <h1>Internships, Sarah's website under construction</h1>
     </body>
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="internships.html">Internships</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="internships.html">Internships</a>
         <a href="projects.html">Projects</a>
         <a href="teaching.html">Teaching</a>
         <a href="research.html">Research</a>
