--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
         <h1>Projects, Sarah's website under construction</h1>
     </body>
     <div class="topnav">
-        <a class="active" href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="internships.html">Internships</a>
-        <a href="projects.html">Projects</a>
+        <a class="active" href="projects.html">Projects</a>
         <a href="teaching.html">Teaching</a>
         <a href="research.html">Research</a>
     </div>
