--- a/index.html
+++ b/index.html
@@ -23,4 +23,12 @@
             <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
             </div>
     </div>
+    <div class="row">
+        <div class="column">
+        <p>Sarah Nassery<br>Intern and Undergraduate Researcher<br>[Email]</p>
+        </div>
+        <div class="column">
+        <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
+        </div>
+</div>
 </html>
