Center website content.

--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>Sarah's website under construction</h1>
-    </body>
-    <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="internships.html">Internships</a>
-        <a href="projects.html">Projects</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="research.html">Research</a>
+    <div class="content">
+        <body>
+            <h1>Sarah's website under construction</h1>
+        </body>
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="internships.html">Internships</a>
+            <a href="projects.html">Projects</a>
+            <a href="teaching.html">Teaching</a>
+            <a href="research.html">Research</a>
+        </div>
+        <div class="row">
+                <div class="column">
+                <img src="anteater_logo.png" alt="Anteater Logo" style="width:50%">
+                <p>Sarah Nassery<br>Intern and Undergraduate Researcher<br>[Email]</p>
+                </div>
+                <div class="column">
+                <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
+                </div>
     </div>
-    <div class="row">
-            <div class="column">
-            <img src="anteater_logo.png" alt="Anteater Logo" style="width:50%">
-            <p>Sarah Nassery<br>Intern and Undergraduate Researcher<br>[Email]</p>
-            </div>
-            <div class="column">
-            <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
-            </div>
 </div>
 </html>
