Center website content.

--- a/teaching.html
+++ b/teaching.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Teaching, Sarah's website under construction.</title>
+        <title>Sarah Nassery [Website Under Construction]</title>
         <meta charset = "UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
