--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <div class="content">
         <body>
-            <h1>Sarah's website under construction</h1>
+            <h1>Sarah Nassery [Website Under Construction]</h1>
         </body>
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
