--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Teaching, Sarah's website under construction</h1>
+        <h1>Sarah Nassery [Website Under Construction]</h1>
     </body>
     <div class="topnav">
         <a href="index.html">Home</a>
