--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="row">
                 <div class="column">
                 <img src="anteater_logo.png" alt="Anteater Logo" style="width:50%">
-                <p>Sarah Nassery<br>Intern, Researcher, and Undergraduate Student<br>[Email]</p>
-                <a href="https://www.linkedin.com/in/sarah-nassery">LinkedIn</a>
+                <p>Sarah Nassery<br>Intern, Researcher, and Undergraduate Student<br>[Email] | <a href="https://www.linkedin.com/in/sarah-nassery">LinkedIn</a></p>
                 </div>
                 <div class="column">
                 <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
