Add bio content.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <p>Sarah Nassery<br>Intern, Researcher, and Undergraduate Student<br>[Email] | <a href="https://www.linkedin.com/in/sarah-nassery">LinkedIn</a></p>
                 </div>
                 <div class="column">
+                <h2>Welcome :D</h2>
+                <p>My name is Sarah, and I'm a third-year undergraduate in Computer Science and Engineering at the Unviersity of California, Irvine.</p>
                 <img src="graduating_anteater.png" alt="Graduating Anteater" style="width:50%">
                 </div>
     </div>
